--- a/package.json
+++ b/package.json
@@ -13,8 +13,15 @@
   },
   "main": "background.js",
   "dependencies": {
+    "ant-design-vue": "^1.6.0",
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "fs-extra": "^9.0.0",
+    "lodash-id": "^0.14.0",
+    "lowdb": "^1.0.0",
+    "rss-parser": "^3.8.0",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.17.7",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
