--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fs-extra": "^9.0.0",
     "lodash-id": "^0.14.0",
     "lowdb": "^1.0.0",
+    "proxy-agent": "^3.1.1",
     "rss-parser": "^3.8.0",
     "vue": "^2.6.11",
     "vue-i18n": "^8.17.7",
